# page-fetcher

./: README.md  pyproject.toml  requirements.txt  setup.py  test.py
page_fetcher/: __init__.py  abstractions.py  exceptions.py  fetcher.py  logs.py  marketplaces.py  options.py  template.py
page_fetcher/marketplaces/: google_shopping.py  mercado_livre.py  rihappy.py
page_fetcher/options/: amazon.py
page_fetcher/utility/: accept.py  headers.py  weight.py
tests/: test_cooldown.py  test_fetch.py  test_interactive_fetch.py  test_list_fetch.py
