[project]
name = "page-fetcher"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "thiagola92", email = "thiagola92@gmail.com"},
]
dependencies = [
    "la-headers @ git+https://github.com/thiagola92/la-headers",
    "la-catch==0.0.6",
    "la-stopwatch==0.0.9",
    "aiohttp[speedups]==3.8.3",
    "page-models==0.2.2",
    "logger-utility==0.1.1",
]

[project.urls]
repository = "https://github.com/la-catalog/page-fetcher"

[project.optional-dependencies]
[tool.pdm]

[tool.pdm.scripts]
unittest = "python -m unittest discover -v -f -s tests"
black = "python -m black ."
isort = "python -m isort -v --ac --profile black ."

[tool.pdm.dev-dependencies]
lint = [
    "black==22.12.0",
    "isort==5.12.0",
]

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"

[[tool.pdm.source]]
url = "https://la-catalog.github.io/pypi/simple/"
name = "la-catalog"

[[tool.pdm.source]]
url = "https://pypi.org/simple"
name = "pypi"

[tool.pdm.resolution]
respect-source-order = true
